<resources>
    <string name="app_name">DYPIEMR</string>
    <string name="click_here_to_get_fee_structure">FEE STRUCTURE</string>
    <string name="click_here_to_get_documentation_details">DOCUMENTATION DETAILS</string>
    <string name="dypiemr">DYPIEMR</string>
    <string name="about_dypiemr">ABOUT DYPIEMR</string>
    <string name="faculty_information">FACULTY INFORMATION</string>
    <string name="courses">COURSES</string>
    <string name="training_and_placement">TRAINING &amp; \n PLACEMENT</string>
    <string name="documents_required_and_fee_structure">FEES &amp;\n DOCUMENTATION</string>
    <string name="campus_view">CAMPUS \n LOCATOR</string>
    <string name="about_developers">About Developers</string>
    <string name="institute_at_a_glance">Institute At A Glance</string>
    <string name="vision_mission_and_objectives">Vision, Mission and Objectives</string>
    <string name="messages">Messages</string>
    <string name="virtual_tour">Virtual Tour</string>
    <string name="about_us">ABOUT US</string>
    <string name="nwelcome_to_department_of_chemical_engineering_n"> \n WELCOME TO DEPARTMENT OF CHEMICAL ENGINEERING \n</string>
    <string name="ug_degree_course_offered">UG Degree course offered</string>
    <string name="b_e_chemical">B. E. (Chemical)</string>
    <string name="course_duration">course Duration</string>
    <string name="_4_years">4 years</string>
    <string name="year_of_establishnment">Year of Establishnment</string>
    <string name="ug_intake">UG Intake</string>
    <string name="_60">60</string>
    <string name="n_t_tchemical_engineering_is_the_branch_of_engineering_that_applies_the_physical_sciences_e_g_chemistry_and_physics_and_or_life_sciences_e_g_biology_microbiology_and_biogeochemistry_together_with_mathematics_and_economics_to_processes_that_convert_raw_materials_or_chemicals_into_more_useful_or_valuable_forms_the_main_task_of_chemical_engineers_is_to_develop_economic_ways_of_using_materials_and_energy_a_chemical_engineer_applies_the_skills_of_chemistry_and_engineering_to_fundamental_problems_in_not_just_chemical_petrochemical_biochemical_and_materials_processing_industries_but_also_pharmaceuticals_medical_devices_and_drug_delivery_systems_semiconductor_manufacturing_nanoscale_technology_renewable_energy_environmental_control_and_many_many_more_today_the_field_of_chemical_engineering_is_a_diverse_one_covering_areas_from_biotechnology_and_nanotechnology_to_mineral_processing_a_chemical_engineer_may_be_involved_in_industry_or_university_research_where_they_are_tasked_in_designing_and_performing_experiments_to_create_new_and_better_ways_of_production_controlling_pollution_conserving_resources_and_making_these_processes_safer_they_may_be_involved_in_designing_and_constructing_plants_as_a_project_engineer_in_this_field_the_chemical_engineer_uses_their_knowledge_in_selecting_plant_equipment_and_the_optimum_method_of_production_to_minimize_costs_and_increase_profitability_after_its_construction_they_may_help_in_upgrading_its_equipment_they_may_also_be_involved_in_its_daily_operations">\n\t\tChemical Engineering is the branch of engineering that applies the physical sciences (e.g., chemistry and physics) and /or life sciences (e.g., biology, microbiology and biochemistry) together with mathematics and economics to processes that convert raw materials or chemicals into more useful or valuable forms. The main task of \'Chemical Engineers\' is to develop economic ways of using materials and energy. A chemical engineer applies the skills of chemistry and engineering to fundamental problems in not just chemical, petrochemical, biochemical and materials processing industries, but also, pharmaceuticals, medical devices and drug delivery systems, semiconductor manufacturing, nanoscale technology, renewable energy, environmental control and many more. Today, the field of chemical engineering is a diverse one, covering areas from biotechnology and nanotechnology to mineral processing. A chemical engineer may be involved in industry or university research where they are tasked in designing and performing experiments to create new and better ways of production, controlling pollution, conserving resources and making these processes safer. They may be involved in designing and constructing plants as a project engineer. In this field, the chemical engineer uses their knowledge in selecting plant equipment and the optimum method of production to minimize costs and increase profitability. After its construction, they may help in upgrading its equipment. They may also be involved in its daily operations.</string>
    <string name="savitribai_phule_pune_university">Savitribai Phule Pune University</string>
    <string name="affiliated_to">Affiliated to</string>
    <string name="aicte_new_delhi">AICTE, New Delhi</string>
    <string name="approved_by">Approved by</string>
    <string name="_2012">2012</string>
    <string name="_120">120</string>
    <string name="_4_yearscivil">4 years</string>
    <string name="_2012civil">2012</string>
    <string name="aicte_new_delhicivil">AICTE, New Delhi</string>
    <string name="n_t_tthe_department_is_incepted_in_the_year_2013_with_intake_of_60_students_this_is_a_4_year_fulltime_course_to_enhance_the_technical_skill_of_students_department_has_a_team_of_experienced_and_qualified_faculties_who_are_committed_to_serve_students_with_untiring_zeal_and_enthusiasm_we_provide_well_equipped_laboratories_to_perform_experiments_and_endeavor_to_provide_better_teaching_facilities_in_day_to_come_department_is_well_set_to_provide_excellent_civil_engineers_well_trained_in_all_aspects_and_adequately_prepared_to_be_accepted_globally">\n\t\tThe Department is incepted in the Year 2013 with intake of 60 students. This is a 4 year fulltime course. To enhance the technical skill of students department has a team of experienced and qualified faculties who are committed to serve students with untiring zeal and enthusiasm. We provide well equipped laboratories to perform experiments and endeavor to provide better teaching facilities in day to come. Department is well set to provide excellent Civil engineers well trained in all aspects and adequately prepared to be accepted globally.</string>
    <string name="nin_view_of_the_revolution_in_communication_and_computer_sector_in_the_world_there_is_a_challenging_task_ahead_for_computer_professionals_keeping_this_in_view_the_computer_engineering_course_has_emerged_as_one_of_the_indispensable_engineering_disciplines_the_department_is_equipped_with_computer_center_software_lab_and_an_internet_center_with_ultra_modern_facilities_the_total_intake_capacity_of_the_department_is_120_right_from_its_inception_in_the_year_2012_the_department_has_steadily_grown_in_all_spheres_in_terms_of_student_strength_physical_infrastructure_number_of_labs_subject_wise_as_per_the_rapid_upgradations_introduced_by_aicte_in_the_recent_times_and_progressive_changes_in_syllabi_of_pune_university_pune_brilliant_faculty_strengthened_through_qualification_improvement_programs_human_resources_in_the_form_of_trained_supporting_staff_all_round_quality_development_programs_and_operating_systems_for_improving_upon_the_functional_effectiveness_in_the_department_the_department_has_well_qualified_faculty_members_with_various_specialization_relevant_for_the_industry_the_department_strives_to_develop_long_term_relationships_with_industries_and_market_the_student_s_talents_effectively_the_students_are_thus_provided_high_level_leads_and_pathways_that_enable_them_to_gain_access_to_a_broad_range_of_high_potential_and_hi_tech_career_opportunities">\n\t\tIn view of the revolution in Communication and Computer sector in the world, there is a challenging task ahead for Computer Professionals. Keeping this in view, the Computer Engineering course has emerged as one of the indispensable engineering disciplines. The Department is equipped with Computer Center, Software Lab and an internet center with ultra modern facilities. The total intake capacity of the department is 120. Right from its inception in the year 2012, the Department has steadily grown in all spheres in terms of: Student strength, physical Infrastructure, number of labs - subject wise, as per the rapid upgradations introduced by AICTE in the recent times and progressive changes in syllabi of Pune University,Pune. Brilliant faculty strengthened through qualification improvement programs, human resources in the form of trained supporting staff, all round quality development programs and operating systems for improving upon the functional effectiveness in the department. The Department has well-qualified Faculty Members with various specialization relevant for the industry. The Department strives to develop long Term relationships with Industries and market the Student\'s Talents effectively. The Students are thus provided high level \'Leads and Pathways\' that enable them to gain access to a broad range of \'high potential\' and \'hi-tech\' Career Opportunities.</string>
    <string name="n_tthe_electronics_and_telecommunication_department_is_established_in_the_year_2013_to_meet_the_needs_of_increasing_demands_of_entc_engineers_in_industry_telecom_sector_embedded_technologies_and_vlsi_the_department_is_having_highly_qualified_experienced_and_dedicated_faculty_along_with_state_of_art_infrastructure_and_well_equipped_labs_the_teaching_learning_process_is_made_student_centric_using_the_latest_technologies_the_academics_goes_hand_in_hand_with_guest_lectures_by_eminent_personalities_from_the_industry_alumni_students_subject_experts_from_savitribai_phule_pune_university_department_conducts_various_co_curricular_activities_like_guest_lectures_seminars_workshops_and_industrial_visits_for_students_to_update_their_technical_knowledge_department_helps_students_to_develop_the_soft_skills_and_technical_skills_through_extra_curricular_activities_the_department_is_progressing_day_by_day_under_the_able_guidance_of_principal_dr_a_v_patil_who_herself_is_doctorate_in_image_processing_and_having_a_vast_experience_of_almost_22_years_of_teaching">\n\tThe Electronics and Telecommunication Department is established in the Year 2013 to meet the needs of increasing demands of ENTC Engineers in Industry, Telecom Sector, Embedded Technologies and VLSI. The department is having highly qualified, experienced and dedicated faculty along with State of Art Infrastructure and well equipped Labs. The teaching learning process is made Student centric using the latest technologies. The academics goes hand in hand with Guest Lectures by Eminent Personalities from the Industry, Alumni students, Subject Experts from Savitribai Phule Pune University. Department conducts various co-curricular activities like Guest Lectures, Seminars, Workshops and Industrial Visits for students to update their technical knowledge. Department helps students to develop the soft skills and technical skills through Extra Curricular Activities. The department is progressing day by day under the able guidance of Principal Dr. A V Patil who herself is Doctorate in Image Processing and having a vast experience of almost 22 years of teaching.</string>
    <string name="tpo_s_message">TPO\'s Message</string>
    <string name="tpo_overview">TPO Overview</string>
    <string name="department_faculty_representatives">Department Faculty Representatives</string>
    <string name="our_recruiters">Our Recruiters</string>
    <string name="vision">Vision</string>
    <string name="mission">Mission</string>
    <string name="institute_objectives">Institute Objectives</string>
</resources>