<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:weightSum="1"
    tools:context="com.miniproject.dypiemr.TpActivity">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="top|center">
    <Button
        android:id="@+id/button6"
        android:layout_width="350sp"
        android:layout_height="98dp"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:background="@color/colorPrimaryDark"
        android:onClick="msg"
        android:text="@string/tpo_s_message"
        android:textAllCaps="false"
        android:textColor="#424242"
        android:textSize="30sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button5"
        android:layout_width="350sp"
        android:layout_height="98dp"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:background="@color/colorPrimaryDark"
        android:onClick="overview"
        android:text="@string/tpo_overview"
        android:textAllCaps="false"
        android:textColor="#424242"
        android:textSize="30sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button7"
        android:layout_width="350sp"
        android:layout_height="98dp"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:background="@color/colorPrimaryDark"
        android:onClick="represent"
        android:text="@string/department_faculty_representatives"
        android:textAllCaps="false"
        android:textColor="#424242"
        android:textSize="30sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button8"
        android:layout_width="350sp"
        android:layout_height="98dp"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:background="@color/colorPrimaryDark"
        android:onClick="recruit"
        android:text="@string/our_recruiters"
        android:textAllCaps="false"
        android:textColor="#424242"
        android:textSize="30sp"
        android:textStyle="bold" />
</LinearLayout>
</ScrollView>
