<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background"
    tools:context="com.miniproject.dypiemr.MainActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/menu"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="#67c8ff"
            android:gravity="center_horizontal"
            android:text="@string/dypiemr"
            android:textColor="#ffffff"
            android:textSize="40dp"
            android:textStyle="bold"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <Button
            android:id="@+id/about"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_marginLeft="31dp"
            android:layout_marginStart="31dp"
            android:background="@mipmap/about"
            android:elevation="24dp"
            android:gravity="top|center"
            android:textColor="#000000"
            android:textStyle="bold"
            android:layout_marginTop="14dp"
            android:layout_below="@+id/menu"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <Button
            android:id="@+id/faculty"
            android:layout_width="140dp"
            android:layout_height="140dp"

            android:background="@mipmap/faculty"
            android:gravity="top|center"
            android:textColor="#000000"
            android:textStyle="bold"
            android:layout_below="@+id/textView133"
            android:layout_alignLeft="@+id/textView133"
            android:layout_alignStart="@+id/textView133"
            android:layout_marginTop="21dp" />

        <Button
            android:id="@+id/course"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_marginEnd="30dp"
            android:layout_marginRight="30dp"
            android:background="@mipmap/courses"
            android:gravity="top|center"
            android:textColor="#000000"
            android:textStyle="bold"
            android:layout_alignBaseline="@+id/about"
            android:layout_alignBottom="@+id/about"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <Button
            android:id="@+id/tp"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_alignBaseline="@+id/faculty"
            android:layout_alignBottom="@+id/faculty"
            android:layout_alignLeft="@+id/textView135"
            android:layout_alignStart="@+id/textView135"
            android:background="@mipmap/deal"
            android:gravity="top|center"
            android:textColor="#000000"
            android:textStyle="bold" />

        <Button
            android:id="@+id/fee"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:background="@mipmap/fee"
            android:gravity="top|center"
            android:textColor="#000000"
            android:textStyle="bold"
            android:layout_below="@+id/textView134"
            android:layout_alignLeft="@+id/textView137"
            android:layout_alignStart="@+id/textView137"
            android:layout_marginTop="15dp" />

        <TextView
            android:id="@+id/textView137"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="top|center"
            android:text="@string/documents_required_and_fee_structure"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_below="@+id/fee"
            android:layout_alignRight="@+id/textView134"
            android:layout_alignEnd="@+id/textView134"
            android:layout_alignLeft="@+id/textView134"
            android:layout_alignStart="@+id/textView134" />

        <Button
            android:id="@+id/map"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:background="@mipmap/overview"
            android:gravity="top|center"
            android:textColor="#000000"
            android:textStyle="bold"
            android:layout_alignBaseline="@+id/fee"
            android:layout_alignBottom="@+id/fee"
            android:layout_alignLeft="@+id/textView136"
            android:layout_alignStart="@+id/textView136" />

        <TextView
            android:id="@+id/textView133"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/about"
            android:layout_alignLeft="@+id/about"
            android:layout_alignRight="@+id/about"
            android:layout_alignStart="@+id/about"
            android:layout_below="@+id/about"
            android:gravity="top|center"
            android:text="@string/about_dypiemr"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView134"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/faculty"
            android:layout_alignLeft="@+id/faculty"
            android:layout_alignRight="@+id/faculty"
            android:layout_alignStart="@+id/faculty"
            android:layout_below="@+id/faculty"
            android:gravity="top|center"
            android:text="@string/faculty_information"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView135"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="top|center"
            android:text="@string/courses"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_below="@+id/course"
            android:layout_alignLeft="@+id/course"
            android:layout_alignStart="@+id/course"
            android:layout_alignRight="@+id/course"
            android:layout_alignEnd="@+id/course" />

        <TextView
            android:id="@+id/textView136"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="top|center"
            android:text="@string/training_and_placement"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_below="@+id/tp"
            android:layout_alignLeft="@+id/tp"
            android:layout_alignStart="@+id/tp"
            android:layout_alignRight="@+id/tp"
            android:layout_alignEnd="@+id/tp" />

        <TextView
            android:id="@+id/textView138"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="top|center"
            android:text="@string/campus_view"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_below="@+id/map"
            android:layout_alignLeft="@+id/map"
            android:layout_alignStart="@+id/map"
            android:layout_alignRight="@+id/map"
            android:layout_alignEnd="@+id/map" />

        <TextView
            android:id="@+id/feedback"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="#67c8ff"
            android:gravity="center"
            android:text="Feedback"
            android:textColor="#ffffff"
            android:textSize="40dp"
            android:textStyle="bold"
            android:layout_below="@+id/textView137"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="18dp"
            android:layout_marginBottom="5dp"
            android:onClick="click"/>
    </RelativeLayout>
</ScrollView>
